2011-04-27  Eli Zaretskii  <eliz@gnu.org>

	* quail/latin-ltx.el <\aleph>: Produce ALEF SYMBOL instead of
	HEBREW LETTER ALEF.  (Bug#8563)

2011-03-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.3 released.

2011-02-23  Juanma Barranquero  <lekktu@gmail.com>

	* quail/ethiopic.el ("ethiopic"): Fix tpo in docstring.

2010-08-28  Kenichi Handa  <handa@m17n.org>

	* quail/japanese.el (quail-japanese-update-translation):
	Fix handling of invalid key.

2010-08-15  Andreas Schwab  <schwab@linux-m68k.org>

	* quail/vntelex.el ("vietnamese-telex"): Doc fix.

	* quail/georgian.el: Remove extra backslashes.

2010-08-14  Andreas Schwab  <schwab@linux-m68k.org>

	* quail/arabic.el: Quote [ and ].
	* quail/latin-ltx.el: Likewise.

	* quail/greek.el ("greek", "greek-postfix"): Change string to
	character.

2010-08-13  Kenichi Handa  <handa@m17n.org>

	* quail/greek.el ("greek-postfix"): Add rules for Greek style quotes.

2010-08-09  Kenichi Handa  <handa@m17n.org>

	* quail/greek.el ("greek"): Add rules for Greek style quotes.

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-04-06  Chong Yidong  <cyd@stupidchicken.com>

	* quail/vntelex.el: Fix "af" rule (Bug#5836).

2010-02-16  Kenichi Handa  <handa@m17n.org>

	* SKK-DIC/SKK-JISYO.L: Updated to the latest version.

2009-12-05  Vasily Korytov  <vasily@korytov.pp.ru>

	* quail/cyrillic.el (russian-typewriter): Change keyboard layout.
	(Bug#904)

2009-09-09  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (install): Set umask to world-readable before creating
	directories.

2009-08-31  Juri Linkov  <juri@jurta.org>

	* quail/ipa.el ("ipa"): Set `forget-last-selection' to nil.
	("ipa-x-sampa"): Set `forget-last-selection' to nil.
	Set `deterministic' to nil.
	("ipa"): Bind "g" to U+0261, and "tsh" to a list of "U+02A7",
	"U+0074 U+0283", "U+0074 U+2040 U+0283".
	("ipa-kirshenbaum", ipa-x-sampa"): Bind "g" to U+0261, and "tS"
	to a list of "U+02A7", "U+0074 U+0283", "U+0074 U+2040 U+0283".