@@ -515,7 +515,7 @@ system, including many technical ones.  Examples:
  ("\\barwedge" ?⊼)
  ("\\because" ?∵)
  ("\\beta" ?β)
- ("\\beth" ?ב)
+ ("\\beth" ?ℶ)
  ("\\between" ?≬)
  ("\\bigcap" ?⋂)
  ("\\bigcirc" ?◯)
@@ -569,7 +569,7 @@ system, including many technical ones.  Examples:
 
  ("\\dag" ?†)
  ("\\dagger" ?†)
- ("\\daleth" ?ד)
+ ("\\daleth" ?ℸ)
  ("\\dashv" ?⊣)
  ("\\ddag" ?‡)
  ("\\ddagger" ?‡)
@@ -626,7 +626,7 @@ system, including many technical ones.  Examples:
  ("\\gets" ?←)
  ("\\gg" ?≫)
  ("\\ggg" ?⋙)
- ("\\gimel" ?ג)
+ ("\\gimel" ?ℷ)
  ("\\gnapprox" ?⋧)
  ("\\gneq" ?≩)
  ("\\gneqq" ?≩)
