@@ -1,3 +1,8 @@
+2011-04-28  Eli Zaretskii  <eliz@gnu.org>
+
+	* quail/latin-ltx.el <\beth, \gimel, \daleth>: Produce
+	corresponding symbols rather than Hebrew letters.  (Bug#8563)
+
 2011-04-27  Eli Zaretskii  <eliz@gnu.org>
 
 	* quail/latin-ltx.el <\aleph>: Produce ALEF SYMBOL instead of
